Feature open mode state (#25)
* Renamed all TrainingMode references to OpenMode

* Renamed training mode package to openmode

* Renamed final training mode references

* Added id's in item specs

* Added SQLite database support, and save gun states when the server shuts down

* Replaced the OpenModeKeyProvider with OpenModeInitializer and remove the provider binding

* Added feature that load the player's state when they join open mode

* Renamed StateStorage to PlayerStateStorage

* Refactored SqliteStorage to only contains methods specific to player state storage

* Added method to PlayerStateStorage to delete old player states

* Added event handler that deregisters a player when quitting

* Added event handler that deregisters a player when being kicked

* Renamed all collection encapsulation classes suffixes from Storage to Container to avoid confusion with other classes who manage real persistence

* Added a PlayerLifecycleHandler that handles player creation and removal in games

* Added event listeners for PlayerKickEvent and PlayerQuitEvent

* Handle player join and leaves through a lifecycle handler

* Refactored the design for gun state storage, so each data type gets their own separate repository class

* Added a EquipmentStateRepository

* Implemented the EquipmentStateRepository in PlayerStateStorage

* Load equipment items when loading player state from storage

* Added a lifecycle handler that can cleanup specific items when the player leaves a game context