@@ -3,14 +3,17 @@ package nl.matsgemmeke.battlegrounds;
 import co.aikar.commands.PaperCommandManager;
 import com.google.inject.Guice;
 import com.google.inject.Injector;
+import com.j256.ormlite.logger.Level;
 import nl.matsgemmeke.battlegrounds.command.*;
 import nl.matsgemmeke.battlegrounds.command.condition.ExistentSessionIdCondition;
 import nl.matsgemmeke.battlegrounds.command.condition.ExistentWeaponIdCondition;
 import nl.matsgemmeke.battlegrounds.command.condition.NonexistentSessionIdCondition;
-import nl.matsgemmeke.battlegrounds.command.condition.TrainingModePresenceCondition;
+import nl.matsgemmeke.battlegrounds.command.condition.OpenModePresenceCondition;
 import nl.matsgemmeke.battlegrounds.event.EventDispatcher;
 import nl.matsgemmeke.battlegrounds.event.handler.*;
 import nl.matsgemmeke.battlegrounds.event.listener.EventListener;
+import nl.matsgemmeke.battlegrounds.game.GameContextProvider;
+import nl.matsgemmeke.battlegrounds.game.openmode.OpenModeInitializer;
 import org.bukkit.event.block.BlockBurnEvent;
 import org.bukkit.event.block.BlockSpreadEvent;
 import org.bukkit.event.entity.EntityDamageByEntityEvent;
@@ -24,6 +27,7 @@ import java.util.logging.Logger;
 
 public class BattlegroundsPlugin extends JavaPlugin {
 
+    private GameContextProvider contextProvider;
     private Injector injector;
     private InternalsProvider internals;
     private Logger logger;
@@ -46,13 +50,23 @@ public class BattlegroundsPlugin extends JavaPlugin {
         logger.info("Successfully started Battlegrounds v" + this.getDescription().getVersion());
     }
 
+    @Override
+    public void onDisable() {
+        contextProvider.shutdown();
+    }
+
     private void startPlugin() throws StartupFailedException {
         this.setUpInternalsProvider();
+        this.setUpLogging();
 
         File dataFolder = this.getDataFolder();
-        BattlegroundsModule module = new BattlegroundsModule(dataFolder, internals, this, pluginManager);
+        BattlegroundsModule module = new BattlegroundsModule(dataFolder, internals, logger, this, pluginManager);
 
         injector = Guice.createInjector(module);
+        contextProvider = injector.getInstance(GameContextProvider.class);
+
+        OpenModeInitializer openModeInitializer = injector.getInstance(OpenModeInitializer.class);
+        openModeInitializer.initialize();
 
         this.setUpEventHandlers();
         this.setUpCommands();
@@ -74,7 +88,7 @@ public class BattlegroundsPlugin extends JavaPlugin {
 
         // Register custom conditions to ACF
         var commandConditions = commandManager.getCommandConditions();
-        commandConditions.addCondition("training-mode-presence", injector.getInstance(TrainingModePresenceCondition.class));
+        commandConditions.addCondition("open-mode-presence", injector.getInstance(OpenModePresenceCondition.class));
         commandConditions.addCondition(Integer.class, "existent-session-id", injector.getInstance(ExistentSessionIdCondition.class));
         commandConditions.addCondition(String.class, "existent-weapon-id", injector.getInstance(ExistentWeaponIdCondition.class));
         commandConditions.addCondition(Integer.class, "nonexistent-session-id", injector.getInstance(NonexistentSessionIdCondition.class));
@@ -94,6 +108,7 @@ public class BattlegroundsPlugin extends JavaPlugin {
         eventDispatcher.registerEventHandler(PlayerInteractEvent.class, injector.getInstance(PlayerInteractEventHandler.class));
         eventDispatcher.registerEventHandler(PlayerItemHeldEvent.class, injector.getInstance(PlayerItemHeldEventHandler.class));
         eventDispatcher.registerEventHandler(PlayerJoinEvent.class, injector.getInstance(PlayerJoinEventHandler.class));
+        eventDispatcher.registerEventHandler(PlayerQuitEvent.class, injector.getInstance(PlayerQuitEventHandler.class));
         eventDispatcher.registerEventHandler(PlayerRespawnEvent.class, injector.getInstance(PlayerRespawnEventHandler.class));
         eventDispatcher.registerEventHandler(PlayerSwapHandItemsEvent.class, injector.getInstance(PlayerSwapHandItemsEventHandler.class));
     }
@@ -101,10 +116,17 @@ public class BattlegroundsPlugin extends JavaPlugin {
     private void setUpInternalsProvider() throws StartupFailedException {
         try {
             String packageName = BattlegroundsPlugin.class.getPackage().getName();
-            String internalsName = getServer().getClass().getPackage().getName().split("\\.")[3];
-            internals = (InternalsProvider) Class.forName(packageName + ".nms." + internalsName + "." + internalsName.toUpperCase()).newInstance();
+            String internalsName = this.getServer().getClass().getPackage().getName().split("\\.")[3];
+            String className = packageName + ".nms." + internalsName + "." + internalsName.toUpperCase();
+
+            internals = (InternalsProvider) Class.forName(className).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new StartupFailedException("Failed to find a valid implementation for this server version");
         }
+    }
+
+    private void setUpLogging() {
+        // Disable ORMLite logs
+        com.j256.ormlite.logger.Logger.setGlobalLogLevel(Level.ERROR);
     }
 }
